# todo-kubernetes

./: README.md  docker-compose.yml
api_server/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.release  entrypoint.sh  migration.sql
api_server/src/: main.rs
kubernetes/: storage.yaml
kubernetes/postgres/: postgres-config.yaml  postgres-service.yaml  postgres-statefulset.yaml
kubernetes/redis/helm/: values-customized.yaml  values.yaml
kubernetes/redis/vanilla/: redis-config.yaml  redis-sentinel.yaml  redis-service.yaml  redis-statefulset.yaml
kubernetes/server/: pod.yaml  server-config.yaml  server-rbac.yaml  server.yaml
