[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
lazy_static = "1.4.0"
log = "0.4.16"
pretty_env_logger = "0.4.0"
redis = { version = "0.21.5", features = ["tokio-comp"] }
redis-derive = "0.1.5"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sqlx = { version = "0.5.13", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.17.0", features = ["full"] }
warp = "0.3.2"
